[Terry N.] bring viskit up to src 11 and build w/ JDK17+. Still issues with constant having to open projects/assemblies from major refactoring 4+ years ago. AnalystReport fails due to repeated calls to the XML Configuration process <- it's a singleton, so shouldn't happen!! Update of JAXB and other libs